<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_search">Search</string>
    <string name="search_query_text">Enter Search Term</string>
    <string name="title_activity_full_image_display">Large Size Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_settings_title">Advanced Search Options</string>
    <string name="label_image_size">Image Size</string>
    <string name="label_color_filter">Color Filter</string>
    <string name="label_image_type">Image Type</string>
    <string name="label_site_filter">Site Filter</string>
    <string name="site_hint">google.com</string>
    <string name="button_save">Save</string>
    
</resources>
