<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >
    
    <TextView
        android:id="@+id/txtSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_settings_title"
        android:textStyle="bold"
     />
        
    <TextView
        android:id="@+id/txtImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_image_size"
        android:layout_below="@+id/txtSettingsTitle"
        android:layout_marginTop="25dp"
        />
    
    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_alignBaseline="@+id/txtImageSize"
        android:layout_toRightOf="@+id/txtImageSize"
        android:layout_marginLeft="20dp"
        android:layout_width="100dp"
        android:entries="@array/size_array"
        android:layout_height="wrap_content"
        />
    
    <TextView
        android:id="@+id/txtColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_color_filter"
        android:layout_below="@+id/txtImageSize"
        android:layout_marginTop="25dp"
        />
    
    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="100dp"
        android:layout_alignBaseline="@+id/txtColorFilter"
        android:layout_toRightOf="@+id/txtColorFilter"
        android:layout_marginLeft="20dp"
        android:entries="@array/color_array"
        android:layout_height="wrap_content"
      />
    
   <TextView
        android:id="@+id/txtImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_image_type"
        android:layout_below="@+id/txtColorFilter"
        android:layout_marginTop="25dp"
        />
   
   <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="100dp"
        android:layout_alignBaseline="@+id/txtImageType"
        android:layout_toRightOf="@+id/txtImageType"
        android:layout_marginLeft="20dp"
        android:entries="@array/type_array"
        android:layout_height="wrap_content"
    />
   
    <TextView
        android:id="@+id/txtSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_site_filter"
        android:layout_below="@+id/txtImageType"
        android:layout_marginTop="25dp"
        />
    
    <EditText
        android:id="@+id/edtSiteFilter"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtSiteFilter"
        android:layout_alignBottom="@+id/txtSiteFilter"
        android:ems="5"
        android:layout_marginLeft="20dp"
        android:hint="" />
    
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSiteFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="onSaveClick"
        android:text="@string/button_save" />		

</RelativeLayout>
